Fix alignment of nav bar items.

--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,10 @@ body {
 
 .bodycontainer {
   max-width: 1000px;
-  margin: 0 20px;
+  margin: 0 1.25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 
@@ -43,14 +42,14 @@ img {
 .certification {
     height: 4.5rem;
     margin-bottom: 4rem;
-    margin-right: 5rem;
+    margin-left: 2rem;
     width: auto;
   }
 
 .logo {
   height: 10rem;
   width: auto;
-  align-self: center;
+  margin-left: 11.75rem;
 
 }
 
@@ -75,8 +74,10 @@ img {
 
 
   width: auto;
-  padding: 10px 10px;
-  margin: 3px 3px;
+  /*padding: 10px 10px;
+  margin: 3px 3px;*/
+  padding: 0.8rem 0.8rem;
+  margin: 0.18rem 0.18rem;
   background-color: #3b91b7;
 
 }
@@ -98,10 +99,13 @@ li a:hover {
   border: solid;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 920px) {
 .drtiltonwebsite,
 .certification {
   display:none;
+}
+.logo {
+  margin: 0rem 0rem;
 }
 }
 
@@ -125,7 +129,7 @@ li a:hover {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height:62rem;
+  height:52rem;
   width: 100%;
 }
 
@@ -134,7 +138,7 @@ li a:hover {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height:89rem;
+  height:83rem;
   width: 100%;
 }
 
@@ -143,7 +147,7 @@ li a:hover {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height:46rem;
+  height:44rem;
   width: 100%;
 }
 
@@ -152,7 +156,7 @@ li a:hover {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height:76rem;
+  height:71rem;
   width: 100%;
 }
 
